--- a/_posts/2019/2019-06-24-euruko2019.md
+++ b/_posts/2019/2019-06-24-euruko2019.md
@@ -28,23 +28,23 @@ The first speaker was the creator of Ruby [Yukihiro Matsumoto](https://github.co
 
 [Hongli Lai](https://twitter.com/honglilai){:target="_blank"} presented us in **What causes Ruby memory bloat?** his solution to the problem of memory fragmentation. He mentioned the solution is easy and show an app witch step to occupy  230MB without solution to 60MB. The solution that he presented is [Fullstaqruby](https://fullstaqruby.org){:target="_blank"}. Even though still in beta, we must not lose sight of it.
 
-[Torsten Schönebaum](https://twitter.com/radlepunktde) made it in his talk **Building bricks with MRuby: A journey to MRuby on LEGO robots** weak up to my childhood because with ruby using  **mRuby** and Lego he did a robot that can type a message.
+[Torsten Schönebaum](https://twitter.com/radlepunktde){:target="_blank"} made it in his talk **Building bricks with MRuby: A journey to MRuby on LEGO robots** weak up to my childhood because with ruby using  **mRuby** and Lego he did a robot that can type a message.
 
 {% image_custom image="/assets/img/pages/blog/images/mruby.jpg" width="40" lightbox %}
 
 ## Second day
 
-We started with the list of possibles places for the next Euruko beetween them Melbourne, yes, Australia. In this day we had some interesting talks, one of taking my attention was **Yes, I Test In Production... And So Should You**. In this talk [Charity Majors](https://twitter.com/mipsytipsy) explain us how if we test in production we can find the 80% of bugs using only a 20% of effort. This hit a first view with all we are, she told we don't be afraid about test in porduction because we can found more bugs, this is because the environment of production is different that staging. But must not test only in production.
+We started with the list of possibles places for the next Euruko beetween them Melbourne, yes, Australia. In this day we had some interesting talks, one of taking my attention was **Yes, I Test In Production... And So Should You**. In this talk [Charity Majors](https://twitter.com/mipsytipsy){:target="_blank"} explain us how if we test in production we can find the 80% of bugs using only a 20% of effort. This hit a first view with all we are, she told we don't be afraid about test in porduction because we can found more bugs, this is because the environment of production is different that staging. But must not test only in production.
 
 {% image_custom image="/assets/img/pages/blog/images/realdata.jpg" width="40" lightbox %}
 
-[Yusuke Endoh](https://twitter.com/mametter){:target="_blank"} deeptemerened more in **Ruby3** and we can see how types will work. [Jan Krutisch](https://twitter.com/halfbyte) give us a master class of music, and he show us how we can make music with ruby. It was interested and curious at the same time. In each day we have a different kind of talk, in the first day was [Melanie Keatley](https://twitter.com/Keatley){:target="_blank"} in her talk **It's very effective; using Pokemon to catch all code smells** where she show us her owns Pokemons. In the second day [Richard Schneeman](https://twitter.com/schneems){:target="_blank"} as [Marie kondo](https://twitter.com/mariekondo){:target="_blank"} explain us how we can relocate the code in order to optimize our code. In this talk he used his dotter as rabbit dubing, that was awesome.
+[Yusuke Endoh](https://twitter.com/mametter){:target="_blank"} deeptemerened more in **Ruby3** and we can see how types will work. [Jan Krutisch](https://twitter.com/halfbyte){:target="_blank"} give us a master class of music, and he show us how we can make music with ruby. It was interested and curious at the same time. In each day we have a different kind of talk, in the first day was [Melanie Keatley](https://twitter.com/Keatley){:target="_blank"} in her talk **It's very effective; using Pokemon to catch all code smells** where she show us her owns Pokemons. In the second day [Richard Schneeman](https://twitter.com/schneems){:target="_blank"} as [Marie kondo](https://twitter.com/mariekondo){:target="_blank"} explain us how we can relocate the code in order to optimize our code. In this talk he used his dotter as rabbit dubing, that was awesome.
 
 Finally I want to highlight of this day the last talk **The Past, Present, and Future of Rails at GitHub**. [Eileen M. Uchitelle](https://twitter.com/eileencodes){:target="_blank"} talk us her experience in a fork of rails to has a custom feature and their odyssey to update. To highlight her message about we need to invest in update our apps and not be keep in a version, if we don't do that in the future we can have a monster as the legendary Hydra witch for each bug that we can solve there're 3 more.
 
 ## Lighting talks
 
-From Stripe Miriam talked about a gem called [**Sorbet**](https://sorbet.org/){:target="_blank"}, this gem allow us to see the normal method definitions, and could be integrated in our VSCode. I swear that that was what most pleased me, I've been trying for months that my visual works as with TypeScript. Another incredible talk was from Norma Miller who was parsing in real time to text every talks. She told about the machine that she use and in than moment more or less she typed 350000 words and had a ratio of 99.65%. It was amaizing see how she works, and as an anecdote of that talking was a voluntier tried to replace her and she couldn't make any phrase while during her talk.
+From Stripe Miriam talked about a gem called [**Sorbet**](https://sorbet.org/){:target="_blank"}, this gem allow us to see the normal method definitions, and could be integrated in our VSCode. I swear that that was what most pleased me, I've been trying for months that my visual works as with TypeScript. Another incredible talk was from Norma Miller who was parsing in real time to text every talks. She told about the machine that she use and in than moment more or less she typed 350000 words and had a ratio of 99.65%. It was amaizing see how she works, and as an anecdote of that talking was a volunteer tried to replace her and she couldn't make any phrase while during her talk.
 
 ## Next stop
 
