--- a/_posts/2019/2019-06-24-euruko2019.md
+++ b/_posts/2019/2019-06-24-euruko2019.md
@@ -1,53 +1,96 @@
 ---
 layout: post
-title: Euruko 2019, Conference in a ship
-date: 2019-06-24
+title: Euruko 2019 - conference on a ship
+date: 2019-06-25
 header_image: private/euruko2019.jpeg
-header_position: top
 category: events
 tags: ["ruby", "conference"]
 authors: ["German"]
 about_authors: ["gsanemeterio"]
 ---
 
-Last week Unai and me were in the [European Ruby conference](https://euruko2019.org/){:target="_blank"} in Rotterdam. As I commented in my last [blog](https://developer.epages.com/blog/tech-stories/how-i-became-fond-of-ruby-on-rails-as-a-javascript-developer/){:target="_blank"} ruby is the main language that we use in team42.
+Last week my colleague and I were in Rotterdam for the [European Ruby conference](https://euruko2019.org/){:target="_blank"}.
+As I mentioned in my last [post](https://developer.epages.com/blog/tech-stories/how-i-became-fond-of-ruby-on-rails-as-a-javascript-developer/){:target="_blank"}, Ruby is the main language that we use in our team.
+Of course we had to go there!
 
-## Amaizing city, curious place to a conference
+## Amazing city, extraordinary venue
 
-Rotterdam is an awesome city in addition to be the greater port of Europe, I'm not good with the art and the architecture but I was impressed with that I could see in this amaizing city. Also we have not needed to use the public transport, because from the central station to our hotel there is only 30 minutes by walk. Is too curious the place for this conference it was in a ship!! the SS Rotterdam.
+Rotterdam is an awesome city and has so much to offer!
+I'm not good with art and architecture, but I was impressed with what I could see in this amazing city.
+And the port of Rotterdam is the largest in Europe!
+What's more, you can reach many things without using the public transport.
+From the central station to our hotel it was only a 30-minute walk.
+
+The venue for the conference was extraordinary and an absolute highlight.
+It was a ship (!) - the SS Rotterdam.
 
 {% image_custom image="/assets/img/pages/blog/images/ssrotterdam.jpg" width="40" lightbox %}
 
 ## First day
 
-After registered we entered in the room with the other people who came to the conference, we take a breakfast and did networking (also look the merchandising). When it was the time, we went to the ship's theatre where conferences has been taken. After the organization's and sponsors presentation the conference started.
+After the registration we gathered together with the other attendees, had breakfast, and did some networking (there was also lot's of merchandising).
+When it was time, we went to the ship's theatre where the talks were held.
+After the organizational stuff and the sponsor's presentation the conference started.
 
-The first speaker was the creator of Ruby [Yukihiro Matsumoto](https://github.com/matz){:target="_blank"} who talk about the future of Ruby, he noticed Ruby3 will be launch on December of 2020. The main newness is the static typed. In addition he explained he personally hate the typed because is not **DRY** (Don't Repeat Yourself). He is doing as a split project to use who like it, personally I'm going to try to persuade to the team42 to use it 😃.
+The first speaker was the creator of Ruby [Yukihiro Matsumoto](https://github.com/matz){:target="_blank"} who talked about the future of Ruby.
+He announced Ruby3 to be launched in December 2020.
+The main novelty will be the static typing.
+But he let us know that he personally doesn't like it because it is not **DRY** (Don't Repeat Yourself).
+He's doing it as a split project to use whoever likes it.
+Personally I'm going to try to persuade my team to use it 😃.
 
 {% image_custom image="/assets/img/pages/blog/images/matz-euruko2019.jpg" width="40" lightbox %}
 
-[Hongli Lai](https://twitter.com/honglilai){:target="_blank"} presented us in **What causes Ruby memory bloat?** his solution to the problem of memory fragmentation. He mentioned the solution is easy and show an app witch step to occupy  230MB without solution to 60MB. The solution that he presented is [Fullstaqruby](https://fullstaqruby.org){:target="_blank"}. Even though still in beta, we must not lose sight of it.
+[Hongli Lai](https://twitter.com/honglilai){:target="_blank"} presented us in **What causes Ruby memory bloat?** his solution to the problem of memory fragmentation.
+He mentioned the solution is easy, and showed an app with step to occupy 230MB without solution to 60MB.
+The solution that he presented is [Fullstaqruby](https://fullstaqruby.org){:target="_blank"}.
+Even though still in beta, we should not lose sight of it.
 
-[Torsten Schönebaum](https://twitter.com/radlepunktde){:target="_blank"} made it in his talk **Building bricks with MRuby: A journey to MRuby on LEGO robots** weak up to my childhood because with ruby using  **mRuby** and Lego he did a robot that can type a message.
+[Torsten Schönebaum](https://twitter.com/radlepunktde){:target="_blank"} woke up my childhood in his talk **Building bricks with MRuby: A journey to MRuby on LEGO robots**.
+With ruby using **mRuby** and Lego he did a robot that can type a message.
 
 {% image_custom image="/assets/img/pages/blog/images/mruby.jpg" width="40" lightbox %}
 
 ## Second day
 
-We started with the list of possibles places for the next Euruko beetween them Melbourne, yes, Australia. In this day we had some interesting talks, one of taking my attention was **Yes, I Test In Production... And So Should You**. In this talk [Charity Majors](https://twitter.com/mipsytipsy){:target="_blank"} explain us how if we test in production we can find the 80% of bugs using only a 20% of effort. This hit a first view with all we are, she told we don't be afraid about test in porduction because we can found more bugs, this is because the environment of production is different that staging. But must not test only in production.
+We started off with a list of possible cities for the next Euruko, amongst them also Melbourne.
+Yes, Australia!
+
+One talk taking my special attention that day was **Yes, I Test In Production... And So Should You**.
+[Charity Majors](https://twitter.com/mipsytipsy){:target="_blank"} explained us how we can find 80% of bugs having only a 20% effort by testing in production.
+She encouraged us to not be afraid about testing in production as we can find more bugs due to the production environment being different than staging.
+But sure, we shouldn't test in production only.
 
 {% image_custom image="/assets/img/pages/blog/images/realdata.jpg" width="40" lightbox %}
 
-[Yusuke Endoh](https://twitter.com/mametter){:target="_blank"} deeptemerened more in **Ruby3** and we can see how types will work. [Jan Krutisch](https://twitter.com/halfbyte){:target="_blank"} give us a master class of music, and he show us how we can make music with ruby. It was interested and curious at the same time. In each day we have a different kind of talk, in the first day was [Melanie Keatley](https://twitter.com/Keatley){:target="_blank"} in her talk **It's very effective; using Pokemon to catch all code smells** where she show us her owns Pokemons. In the second day [Richard Schneeman](https://twitter.com/schneems){:target="_blank"} as [Marie kondo](https://twitter.com/mariekondo){:target="_blank"} explain us how we can relocate the code in order to optimize our code. In this talk he used his dotter as rabbit dubing, that was awesome.
+[Yusuke Endoh](https://twitter.com/mametter){:target="_blank"} deepened more in the topic of **Ruby3** and we were able to see how types will work.
+[Jan Krutisch](https://twitter.com/halfbyte){:target="_blank"} gave us a master class of music, and he showed us how we can make music with ruby.
+It was interesting and exciting at the same time.
 
-Finally I want to highlight of this day the last talk **The Past, Present, and Future of Rails at GitHub**. [Eileen M. Uchitelle](https://twitter.com/eileencodes){:target="_blank"} talk us her experience in a fork of rails to has a custom feature and their odyssey to update. To highlight her message about we need to invest in update our apps and not be keep in a version, if we don't do that in the future we can have a monster as the legendary Hydra witch for each bug that we can solve there're 3 more.
+Finally I want to highlight the last talk of the day: **The Past, Present, and Future of Rails at GitHub**.
+[Eileen M. Uchitelle](https://twitter.com/eileencodes){:target="_blank"} talked about her experience on a fork of rails to have a custom feature and her odyssey to update it.
+She highlighted that we need to invest in updating our apps.
+If we don't do that, in the future we can have a monster such as the legendary Hydra witch - for each bug that we can solve, there're 3 more.
+
+## Specials
+
+Each day we had a special talk: the first day [Melanie Keatley](https://twitter.com/Keatley){:target="_blank"} showed us her owns Pokemons in her talk **It's very effective; using Pokemon to catch all code smells**.
+The second day [Richard Schneeman](https://twitter.com/schneems){:target="_blank"} as [Marie Kondo](https://twitter.com/mariekondo){:target="_blank"} explained us how we can relocate the code in order to optimize our code.
+In this talk he used his dotter as rabbit dubing, that was awesome.
 
 ## Lighting talks
 
-From Stripe Miriam talked about a gem called [**Sorbet**](https://sorbet.org/){:target="_blank"}, this gem allow us to see the normal method definitions, and could be integrated in our VSCode. I swear that that was what most pleased me, I've been trying for months that my visual works as with TypeScript. Another incredible talk was from Norma Miller who was parsing in real time to text every talks. She told about the machine that she use and in than moment more or less she typed 350000 words and had a ratio of 99.65%. It was amaizing see how she works, and as an anecdote of that talking was a volunteer tried to replace her and she couldn't make any phrase while during her talk.
+Miriam from Stripe talked about a gem called [**Sorbet**](https://sorbet.org/){:target="_blank"} that allows us to see the normal method definitions, and how these could be integrated in our VSCode.
+I swear that that was what most pleased me.
+I've been trying for months that my visual works as with TypeScript.
+Another incredible talk was from Norma Miller who was parsing in real time to transform every talk into text.
+She talked about the machine that she uses, and in that moment more or less she typed 350000 words and had a ratio of 99.65%.
+It was amazing to see how she works! 
+Anecdote: a volunteer tried to replace her, and she couldn't make any phrase during her talk.
 
 ## Next stop
 
-Finished all talks, was the moment to know witch is the city for next Euruko. Helsinki won, and I going to say goodbye with the last words of the future organization, "Euruko is finished, but the next Euruko will be Finnish."
+Once all the talks were done, it was the moment to know which is the city where the nex Euruko will take place.
+Helsinki won, and I'm going to say goodbye with the last words of the future organization: "Euruko is finished, but the next Euruko will be Finnish."
 
 {% image_custom image="/assets/img/pages/blog/images/seayouhelsinki.jpg" width="40" lightbox %}
