Add more content

--- a/_posts/2019/2019-09-17-recap-rnd-day-2019.md
+++ b/_posts/2019/2019-09-17-recap-rnd-day-2019.md
@@ -2,7 +2,7 @@
 layout: post
 title: recap rnd day 2019
 date: 2019-09-17
-header_image: private/rnd-day-19.jpg
+header_image: private/rnd19.jpg
 header_position: center
 header_overlay: true
 category: events
@@ -13,13 +13,45 @@ about_authors: ["bbader"]
 
 Every year during this time we organize our R&D Day.
 Developers from all locations gather togehter and spend a day on topics that are currently relevant to them or might be exciting to work on.
-During the last two months all colleagues had the opportunity to bring in topics they would like to learn more about or have something to share themselves.
+During the last two months all colleagues had the opportunity to suggest topics they would like to learn more about or bring in something they want share themselves.
 With the help of our Scrum Masters this converted into a one-day agenda with a nice mixture of talks, workshops, and open spaces.
 Spoiler alert: and of course there was no way around pizza 🍕!
 
-Our Scrum Master Stefanie started the presentation series with a great talk about "Unconcious Bias".
+## Biased remote work in the cloud
+
+Our Scrum Master started the presentations with a great talk about "Unconcious Bias".
 This was so eye-opening!
 After a small intro we were split into groups to brainstorm solutions together, and discuss recommendations on what to do with a specific unconcious bias situation.
-There were issues such as "A coworker asks: Who's the new girl?" or "You're in a meeting and a female colleague is spoken over or interrupted."
+There were examples such as *A coworker asks: "Who's the new girl?"* or *You're in a meeting and a female colleague is spoken over or interrupted.*.
+
+One of our JavaScript developers continued with a talk about remote work.
+This was specifically interesting to us, because we have development teams in different locations and several teams have remote colleagues.
+So what's the good and the bad about remote work?
+What's the challenge when working from home?
+Is it only the TV and the fridge that can distract us from focusing on a topic?
+Can we overcommunicate?
+Many suggestions we can reflect on and things we can improve.
+
+"The last year in the cloud" was a great recap held by one of our devops engineers.
+What went well?
+Anything new?
+What did we say goodby to?
+What expenses did we have for cloud services?
+Interesting talk that also non-devs were able to follow.
+
+## Surviving in a multi-tenancy shell on GitHub - clean and social
+
+The afternoon was blocked for short talks, workshops, and open spaces.
+While many sessions were already prepared upfront, such as *Surviving in a shell*, *Social Engineering*, *Clean Architecture*, or *Beyond multi-tenancy*, some colleagues came up with spontenous open space sessions, such as *GitHub for grown ups*, *Insights into the development of the esitekic app*, *GraphQL*, or *Development Feedback Loops*.
 
 
+## Any thoughts? Many!
+
+From the *GitHub for beginners* workshop that I held together with my colleague, we gathered some statements about the R&D Day.
+Yes, you hear right: after a 90 minutes workshop, our newborn GitHubbies (all non-devs!) were able to make a Pull Request to our [epages-devportal](https://github.com/ePages-de/epages-devportal){:target="_blank"}.
+
+
+
+
+Ps. I apologize for the crazy headlines.
+I got biased 😉.
