--- a/_posts/2016/2016-07-14-wiremock.md
+++ b/_posts/2016/2016-07-14-wiremock.md
@@ -4,7 +4,7 @@ title: "How to make microservice testing great again"
 date: 2016-07-14
 header_image: private/balls-of-mud.jpg
 category: tech-stories
-tags: ["microservices", "testing", "api", "spring"]
+tags: ["microservices", "testing", "api", "spring", "mock", "wiremock"]
 authors: ["Oliver T."]
 about_authors: ["otrosien"]
 ---
