added a sentence about how to run it

--- a/_posts/2020/2020-01-01-mail2most.md
+++ b/_posts/2020/2020-01-01-mail2most.md
@@ -70,4 +70,6 @@ Multiple profiles are possible as well so you can create different filter for sa
 ## Can i use it ? Is it free ?
 
 The whole project is open-source and licensed under [MIT](https://github.com/cseeger-epages/mail2most/blob/master/LICENSE){:target="_blank"} so you can even reuse the code if you want to.
-Of course its free aswell :P. If you find bugs or want more features feel free to open an [issue](https://github.com/cseeger-epages/mail2most/issues){:target="_blank"} or drop me a [pull request](https://github.com/cseeger-epages/mail2most/pulls){:target="_blank"}.
+Of course its free aswell :P. 
+Mail2Most can be run as it is or using docker, docker-compose, systemd and i will provide a helm configuration also in the future to run it in kubernetes.
+If you find bugs or want more features feel free to open an [issue](https://github.com/cseeger-epages/mail2most/issues){:target="_blank"} or drop me a [pull request](https://github.com/cseeger-epages/mail2most/pulls){:target="_blank"}.
