aded repo link and ending sentence

--- a/_posts/2020/2020-01-01-mail2most.md
+++ b/_posts/2020/2020-01-01-mail2most.md
@@ -72,4 +72,8 @@ Multiple profiles are possible as well so you can create different filter for sa
 The whole project is open-source and licensed under [MIT](https://github.com/cseeger-epages/mail2most/blob/master/LICENSE){:target="_blank"} so you can even reuse the code if you want to.
 Of course its free aswell :P. 
 Mail2Most can be run as it is or using docker, docker-compose, systemd and i will provide a helm configuration also in the future to run it in kubernetes.
-If you find bugs or want more features feel free to open an [issue](https://github.com/cseeger-epages/mail2most/issues){:target="_blank"} or drop me a [pull request](https://github.com/cseeger-epages/mail2most/pulls){:target="_blank"}.
+If you find bugs, have questions or want more features feel free to open an [issue](https://github.com/cseeger-epages/mail2most/issues){:target="_blank"} or drop me a [pull request](https://github.com/cseeger-epages/mail2most/pulls){:target="_blank"}.
+
+Feel free to check out the [github repo](https://github.com/cseeger-epages/mail2most){:target="_blank"}. 
+
+Thanks as always it was a pleasure to have you here at our epages developer blog, see you soon.
