--- a/_posts/2020/2020-01-01-mail2most.md
+++ b/_posts/2020/2020-01-01-mail2most.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Mail2Most - when emails start to speak mattermost
+title: Mail2Most - when emails start to speak Mattermost
 date: 2019-12-10
 header_image: public/mail2most.png
 header_position: bottom
@@ -10,70 +10,69 @@ authors: ["Carsten"]
 about_authors: ["cseeger"]
 ---
 
-Welcome back to a new blogpost for today about a smart little tool called Mail2Most. 
-This tool does some handy stuff by connecting email servers with a chat system called mattermost.
+Welcome back to a new blogpost for today about a smart little tool called Mail2Most.
+This tool connects email servers with a chat system called Mattermost.
 
 ## Mattermost
 
-The short version is [Mattermost](https://mattermost.com/){:target="_blank"} is a chat tool which can be self hosted. 
+[Mattermost](https://mattermost.com/){:target="_blank"} is a chat tool which can be self hosted.
+Also it allows us to protect our internal communication by encryption. 
+Due to that and other possibilities we decided to use it some years ago .
 
-The more detailed description involves questions about security of using [SAAS](https://de.wikipedia.org/wiki/Software_as_a_Service){:target="_blank"} chat systems.
-Questions about encrypted communication and protecting internal communication.
-But the good thing is Mattermost does things right and thats why we decided to use it.
 
 ## Mail2Most
 
 {% image_custom image="https://user-images.githubusercontent.com/13348918/60437141-ff1b5500-9c0d-11e9-913f-ae7c4a034b10.png" width="50" lightbox %}
 
-You may also faced the problems of having a bunch of email accounts that are used maybe for logging stuff or support questions or other stuff that you do not see directly since emails are a mess sometimes.
-So why not filter that stuff and send them to specific channels or users of your chat system directly since this is what is commonly used today ... Chats :D.
-That exactly what [Mail2Most](https://github.com/cseeger-epages/mail2most){:target="_blank"} does.
-Before i created Mail2Most we used another kind of similar system called [mattermail](https://github.com/rodcorsi/mattermail){:target="_blank"} which did the job but was archived for over a year ago and does not support some of the stuff we need. 
-So i did what i always do when stuff not exists that does the job i wanted it to do.
-Writing it from scratch.
-Which brings us back to our Mail2Most. 
+You may also know the problem of having a bunch of email accounts that you maybe use for logging things, support questions or other stuff that you do not see directly. 
+You know that emails are a mess sometimes.
+So why not filter these emails and send them directly to certain channels or users of your chat system, because that's what people usually use today ... Chats :D.
+That is exactly what [Mail2Most](https://github.com/cseeger-epages/mail2most){:target="_blank"} does.
+Before I created Mail2Most we used a similar system called [mattermail](https://github.com/rodcorsi/mattermail){:target="_blank"}. It did the job quite well but it was archived for over a year ago. Also it didn't support some of the things we need.
+So I did what I always do when there isn't a tool that does the job I wanted it to do: I wrote it from scratch.
+That brings us back to our Mail2Most.
 
 ## How to use it
 
-Using Mail2Most isnt that hard. 
-Just download the [latest release](https://github.com/cseeger-epages/mail2most/releases){:target="_blank"} and check the [example configuration](https://github.com/cseeger-epages/mail2most/blob/master/conf/mail2most.conf){:target="_blank"}.
-You can start with mail2most by configuring a default profile which provides reusable defaults for your actual profiles.
-Such a Profile needs a configuration for your mailserver and your mattermost of course since it needs to read mails and send parts of them to your mattermost server.
-Also you can define filters for your mails that allow you to:
+Using Mail2Most isn't that hard.
+You can just download the [latest release](https://github.com/cseeger-epages/mail2most/releases){:target="_blank"} and check the [example configuration](https://github.com/cseeger-epages/mail2most/blob/master/conf/mail2most.conf){:target="_blank"}.
+You can start with Mail2Most by configuring a default profile which provides reusable defaults for your actual profiles.
+Of course such a profile needs a configuration for your mailserver and your Mattermost since it needs to read emails and send parts of them to your Mattermost server.
+Also you can define filters for your emails that allows you to:
 
 - filter for specific **folders**
-- only send mails when they are flaged as **unseen**
-- filter by **From** and **To** fields of course
+- only send emails when they are flaged as **unseen**
+- filter by **From** and **To** fields
 - filter by **subject**
-- or just send mails out that are not older than a specific **time range**
+- or just send emails that are not older than a specific **time range**
 
-For your mattermost server you can define:
+For your Mattermost server you can define:
 
 - **channels** to send messages to
 - **users** to send messages to
-- you can define if you just want to send the **subject** of the mail only or including the **body**
-- you can **strip HTML tags** for some more security if you want to
-- by default the message starts with the senders address which can be disabled also
+- if you only want to send the **subject** of the email or including the **body** too
+- **strip HTML tags** for some more security if you want to
+- messages start with the senders address (default setting) which can be disabled also
 
-As authentication normal username, password aswell as oauth using a personal access token is supported.
+For authentication it supports normal username/password as well as oauth using a personal access token.
 
-On the E-mail side nothing special just provide the credentials, by default the Imap connection is TLS encrypted which can (but should never) be disabled.
-Also you can set the E-mail server to read only which prevents mail2most from setting email flags.
+On the email side you just need to provide the credentials. By default the Imap connection is TLS encrypted which can (but should never) be disabled.
+Also you can set the email server to read-only which prevents Mail2Most from setting email flags.
 
-## Profiles we need more Profiles
+## profiles we need more profiles
 
 When you configured the defaults you can reuse these defaults (or overwrite them) in your actual profiles.
-If you just want to use the defaults as it is just create an empty Profile.
+If you just want to use the defaults as they are just create an empty profile.
 
-Multiple profiles are possible as well so you can create different filter for same or different mail servers or combine any configuration possibilitys as you want to fit your needs.
+Multiple profiles are possible as well. So you can create different filters for same or different email servers or combine any configuration possibilities as you want.
 
-## Can i use it ? Is it free ?
+## Can I use it? Is it free?
 
-The whole project is open-source and licensed under [MIT](https://github.com/cseeger-epages/mail2most/blob/master/LICENSE){:target="_blank"} so you can even reuse the code if you want to.
-Of course its free aswell :P. 
-Mail2Most can be run as it is or using docker, docker-compose, systemd and i will provide a helm configuration also in the future to run it in kubernetes.
-If you find bugs, have questions or want more features feel free to open an [issue](https://github.com/cseeger-epages/mail2most/issues){:target="_blank"} or drop me a [pull request](https://github.com/cseeger-epages/mail2most/pulls){:target="_blank"}.
+The whole project is open-source and licensed under [MIT](https://github.com/cseeger-epages/mail2most/blob/master/LICENSE){:target="_blank"}. You can even reuse the code if you want to.
+Of course it's free as well :P.
+Mail2Most can be run as it is or by using docker, docker-compose or systemd. In the future I will provide a helm configuration also to run it in kubernetes.
+If you find bugs, have questions or want more features simply open an [issue](https://github.com/cseeger-epages/mail2most/issues){:target="_blank"} or drop me a [pull request](https://github.com/cseeger-epages/mail2most/pulls){:target="_blank"}.
 
-Feel free to check out the [github repo](https://github.com/cseeger-epages/mail2most){:target="_blank"}. 
+Feel free to check out the [github repo](https://github.com/cseeger-epages/mail2most){:target="_blank"}.
 
-Thanks as always it was a pleasure to have you here at our epages developer blog, see you soon.
+Thank you! As always it was a pleasure to have you here at our epages developer blog. See you soon.
