Change date and title

--- a/_posts/2020/2020-01-01-mail2most.md
+++ b/_posts/2020/2020-01-01-mail2most.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Mail2Most - when emails start to speak Mattermost
-date: 2019-12-10
+title: How to get emails to speak "Mattermost"
+date: 2020-01-21
 header_image: public/mail2most.png
 header_position: bottom
 category: tech-stories
