--- a/_posts/2020/2020-03-10-scrum.md
+++ b/_posts/2020/2020-03-10-scrum.md
@@ -10,18 +10,15 @@ authors: ["Aroso", "Miriam"]
 about_authors: ["amahaiuddin", "mkofler"]
 ---
 
-We already have explained in our previous blog posts a lot about the agile work at ePages e.g. [how Scrum is used at ePages](/blog/methods-and-tools/epages-turns-agile/), [what it's like to be an agile technical writer](/blog/methods-and-tools/what-its-like-to-be-an-agile-technical-writer/), or [how to introduce new employees to Scrum](/blog/methods-and-tools/how-to-introduce-new-employees-to-scrum/).
-But have you ever wondered how the daily work of a Scrum Master looks like at ePages?
-What's the background of a Scrum Master at ePages, and what challenges they meet?
+We've already explained in our previous blog posts how agile working at ePages looks like, e.g. [how Scrum is used at ePages](/blog/methods-and-tools/epages-turns-agile/), [what it's like to be an agile technical writer](/blog/methods-and-tools/what-its-like-to-be-an-agile-technical-writer/), or [how to introduce new employees to Scrum](/blog/methods-and-tools/how-to-introduce-new-employees-to-scrum/).
+But have you ever wondered how the daily work of a Scrum Master looks like and which challenges they meet?
 Yes?
 Me too. 🙋🏻‍♀️ 
-So, in order to find that out I interviewed one of our Scrum Masters from our office in Jena.
-As our Scrum Master works in our Jena office and I work in our office in Hamburg, we connected remote via Google Hangouts to talk to each other.
+That's why I decided to do an interview with one of our Scrum Masters from Jena.
 
+## Moin Miri, thank you for taking the time for this interview. Let's start with your journey to ePages: What's your background and your job position at ePages?
 
-## Moin Miriam, at first tell us about your journey to ePages: So, what's your background, and your job position at ePages?
-
-Hello, my name is Miriam, but everyone call me Miri.
+Hello, my name is Miriam, but everyone calls me Miri.
 I started in November 2019 as a Scrum Master at ePages.
 In order to tell you how I became a Scrum Master, and how I became a ePagee, I need to go into a little more detail - it's kind of a funny story.
 So, I did my Master degree in Intercultural Personnel Development and Organisational Development in Jena.
@@ -48,46 +45,37 @@ I applied and started as a Scrum Master at ePages.
 My task area is very diverse.
 A big part of my work is working together with the teams.
 Currently, I'm supporting in total two teams in Jena.
-But in my two teams are also team members who work remote from Bratislava and Leipzig.
+But in my two teams are also team members who work remotely from Bratislava and Leipzig.
 My aim is to ensure that my teams can work undisturbed in a harmonic environment without any conflicts.
 If there are any conflicts, I try to adress them, and remove them as soon as possible.
-Organisational development is a big task as well, which includes oganizing and hosting e.g. Daily Meetings or retrospectives.
+Organisational development is a big task as well, which includes organizing and hosting e.g. the Daily or Retrospectives.
 There are some important points I have to consider as a Scrum Master: listen to the team, meet the needs of the team, and building trust to the teams.
-For example, one of my teams wished for no fancy games in the Retrospectives.
-So, I met their needs, and tried to make a simple Retrospective.
-It's important to meet their needs, and not just to give them instructions.
-But for me it is also important that the teams do not refuse everything you suggest.
-Because you also have to consider the scrum processes for effective scrum.
-Making compromises and finding agreements is important.
-But my work as a Scrum Master is not only limited on working together with the teams.
-I have also handle tasks across the teams.
+But my work as a Scrum Master is not only limited to working with the teams.
 The Scrum Master's objective is to encourage team work also across our different locations.
 Our task is for example to coordinate that the teams work cross-functional, to handle communication bareers, to avoid miscommunications between the individual teams, and to support the teams in order to work better together.
-But we do not only work with the RnD teams, but also with other teams like Project Management, Marketing, HR, and Sales in order to develop new team processes.
+We do not only work with the RnD teams, but also with other teams like Project Management, Marketing, HR, and Sales in order to develop new team processes.
 Thus, we would like to ensure that the whole company moves into the same direction.
 
-
-## Could you tell us how your typical work day look like?
+## Could you tell us how your typical work day looks like?
 
 Actually, each day as a Scrum Master is different.
 You never know what the day will bring. 
 So, there's no typical work day, and that's what I like a lot about my job.
 But I will try to explain how my "typical" work day looks like.
 My day starts at 7.30 a.m. at ePages.
-First I get a coffee and try to exchange with other colleagues in the kitchen, to keep me updated.
-Then I return back to my desk to check my e-mails and messages.
+First, I get a coffee and try to exchange with other colleagues in the kitchen to keep me updated.
+Then, I return back to my desk to check my e-mails and messages.
 Afterwards, I priotize my tasks for the day to get a better overview.
 At 9.15 a.m. we have our Scrum Master Daily Meeting where I exchange with the other Scrum Master from Hamburg, for example about ongoing topics in the teams.
-Then at 9.45 a.m. I have the Daily Meetings with my teams.
-After the Daily Meetings and before my lunch break, I try to work on my tasks, which I priotized in the morning.
+Half an hour later I have the Daily with my teams.
+After the Daily and before my lunch break, I try to work on my tasks, which I priotized in the morning.
 I spent my lunch break usally together with the team.
 Sometimes we meet in our social room to eat together, or we go outside to have lunch.
 Sometimes we even cook together.
-For example, this week I am cooking Kaiserschmarrn (since I am originally from Austria) for the whole team. 
-The afternoon is often different, depending on if we have a Sprint or not.
-If we have a Sprint, I spent the day with planning Reviews, and Retrospectives.
-If we do not have Sprint, I work on organisational development tasks, or on cross-team tasks.
-
+For example, this week I will prepare Kaiserschmarrn (since I am originally from Austria) for the whole team. 
+The afternoon is often different, depending on if we have a Sprint change or not.
+If we have a Sprint change, I spent the day with planning Reviews, and Retrospectives.
+Otherwise, I work on organisational development tasks, or on cross-team tasks.
 
 ## What is one of the biggest challenges of your job, and how do you handle it?
 
@@ -99,65 +87,38 @@ Of course it would be easier for me if they would talk about a topic which I'm u
 What I do to handle such situations is to ask the team directly, what the topic is about, and if it is important for us.
 But compared to the beginning, I understand now much more - everything step by step.
 
+## How do you cooperate with your Scrum Master colleagues from Hamburg? Are you in regular exchange with them?
 
-## How is it to work remote with the Scrum Masters from Hamburg? Are you in regularly exchange with them?
-
-So, yes I'm in regularly exchange with the Scrum Masters in Hamburg.
-We have a remote Scrum Master Daily Meeting each morning.
+So, yes I'm in regular exchange with the Scrum Masters in Hamburg.
+We have a remote Scrum Master Daily each morning.
 This meeting is especially for me very important, because I'm the remote person.
 Since I'm not directly in Hamburg, I don't get all important information right away. 
-This makes it so much more important to stay in touch regularly with the Scrum Masters in Hamburg. 
-The Daily Meeting helps us all a lot to keep us updated. 
+This makes it so much more important to stay in touch with the Scrum Masters in Hamburg. 
+The Daily helps us all a lot to keep us updated. 
 Furthermore, the Scrum Masters in Hamburg have a board where they collect important and current topics they discussed about. 
 Once or twice a week we're meeting remote and work on the collected topics together. 
 And if there are any question from my side, I have always the opportunity to call them. 
 The cooperation works very well.
 
-
-## What do you specifically like about your job?
-
-What I really love about my job is that it's very multifaceted and varies.
-Nothing bores me more than a job where each day is the same.
-Everyday is for me like a new adventure.
-This job is perfect to work close with people together and connecting with them.
-It is part of my job to support and evaluate the people, and to notice if there's anything which blocks them, or if there's any potential for conflicts.
-That's what I really like to do.
-So, I can integrate my empathie into my job.
-And I think this is not possible in each job.
-Furthermore, I am really interested in coaching which I also can integrate into my job.
-
-
-## What do you like at ePages?
+## What do you like about ePages?
 
 What I really like about ePages, and what I appreciate is the work atmosphere.
-It's very familiar and you know all employees.
-We cook together, we go for walk together, or make any other excursions like e.g. ice scating.
-And since I'm originally from another country, it is good to work in a company where you feel familiar.
+It's very familiar and you get to know all employees.
+We prepare lunch together, go for a walk, or start other excursions like e.g. ice scating.
+And as I'm not from Jena, it is great to work in a company where you feel familiar.
 The colleagues are very kind and respectful to each other.
-Furthermore, I like the flat hierachies - you don't have the feeling that anyone is standing above or below you.
+Furthermore, I like the flat hierachies - you never have the feeling that anyone is standing above or below you.
 
-
-8. Do you have a favorite Retrospective?
+## Do you have a favorite Retrospective?
 
 Actually, I do not have that one favorite Retrospective.
 But one retro I liked a lot is one which took place outside.
-We had once all the team members together in Jena, including the members who work remote.
-And to connect all the team members a little better, we took a walk together to the Fuchsturm Jena (a castle tower), and had lunch there.
+Once we had all team members together in Jena, including the members who work remotely.
+And in order to connect them a little better, we took a walk together to the Fuchsturm Jena (a castle tower), and had lunch.
 We did the retro on our way to the restaurant and our way back from the restaurant.
 The team was split into several smaller groups.
 Each group got some questions which they had to discuss in their group, to get to know each other better.
-In between the groups changed.
-In the end each team member had to tell to which insight they came.
-At the one hand it was a cool retro because we were outside, we could move, and catch some fresh air.
-At the other hand, it especially improved the relationship of the team members who work remote.
-
-
-## Do you have any tips for other Scrum Master?
-
-Maybe this is not a specific tip for Scrum Masters, but also for other people who work close together with people.
-One tip I can give, is to be authentic.
-I made the experience that if I tried to adjust myself, it didn't worked out well working together with the teams.
-But when I was completely myself, it worked out so much better - also when I may have been sometimes a little insecure.
-Don't try to be someone else because people will notice it.
-Even if the people do not feel it consciously, they will feel subconscious that there's something not right.
-So, just be yourself. 😉
+During the walk the groups changed.
+In the end each team member had to tell us what they've learned.
+On the one hand, it was a cool retro because we were outside, and catched some fresh air.
+On the other hand, it especially improved the relationship of the team members who work remotely.
